[tool.poetry]
name = "data-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
# yahan dependencies add karo, agar koi hai
# example: pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
